--- a/packages/IntegrationTest/package.json
+++ b/packages/IntegrationTest/package.json
@@ -18,9 +18,9 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
-    "@rnw-scripts/eslint-config": "0.1.0",
-    "@rnw-scripts/just-task": "0.0.2",
-    "@rnw-scripts/ts-config": "0.1.0",
+    "@rnw-scripts/eslint-config": "^0.1.1",
+    "@rnw-scripts/just-task": "^0.0.2",
+    "@rnw-scripts/ts-config": "^0.1.0",
     "@types/jest": "^26.0.13",
     "@types/ora": "^3.2.0",
     "@types/ws": "^7.2.6",
