--- a/packages/IntegrationTest/tsconfig.json
+++ b/packages/IntegrationTest/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "@rnw-scripts/ts-config",
-  "include": ["src"],
+  "compilerOptions": {
+    "lib": ["ES2019.Array", "DOM", "ES6" ,"DOM.Iterable", "ScriptHost"],
+  },
+  "include": ["runner", "tests"],
   "exclude": ["node_modules"]
 }
   
