--- a/packages/@rnw-scripts/integrate-rn/package.json
+++ b/packages/@rnw-scripts/integrate-rn/package.json
@@ -27,10 +27,10 @@
     "@rnw-scripts/just-task": "0.0.2",
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/async": "^3.2.3",
-    "@types/lodash": "4.14.161",
+    "@types/lodash": "^4.14.161",
     "@types/ora": "^3.2.0",
-    "@types/semver": "7.3.3",
-    "@types/yargs": "15.0.5",
+    "@types/semver": "^7.3.3",
+    "@types/yargs": "^15.0.5",
     "eslint": "6.8.0",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
