--- a/packages/@rnw-scripts/create-github-releases/package.json
+++ b/packages/@rnw-scripts/create-github-releases/package.json
@@ -30,7 +30,7 @@
     "@types/glob": "^7.1.0",
     "@types/lodash": "^4.14.161",
     "@types/node-fetch": "^2.5.7",
-    "@types/semver": "7.3.3",
+    "@types/semver": "^7.3.3",
     "@types/yargs": "^15.0.5",
     "eslint": "6.8.0",
     "just-scripts": "^0.36.1",
