--- a/packages/IntegrationTest/package.json
+++ b/packages/IntegrationTest/package.json
@@ -7,7 +7,7 @@
     "start": "react-native start",
     "lint": "just-scripts lint",
     "lint:fix": "just-scripts lint:fix",
-    "integrationtest": "jest --runInBand --verbose"
+    "integrationtest": "jest --runInBand --verbose --color"
   },
   "dependencies": {
     "react": "16.13.1",
@@ -20,7 +20,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
     "@rnw-scripts/eslint-config": "^0.1.1",
-    "@rnw-scripts/just-task": "^0.0.2",
+    "@rnw-scripts/just-task": "^0.0.3",
     "@rnw-scripts/ts-config": "^0.1.0",
     "@types/jest": "^26.0.13",
     "@types/ora": "^3.2.0",
