--- a/.ado/templates/prepare-env.yml
+++ b/.ado/templates/prepare-env.yml
@@ -82,3 +82,6 @@ steps:
         Write-Host "##vso[task.setvariable variable=EnforceProcessCountAcrossBuilds]true"
         Write-Host "##vso[task.setvariable variable=UseMultiToolTask]true"
         Write-Host "##vso[task.setvariable variable=MultiProcMaxCount]1"
+        Write-Host "##vso[task.setvariable variable=npm_config_cache_value]$(NPM_CONFIG_CACHE)"
+        Write-Host "##vso[task.setvariable variable=NPM_CONFIG_CACHE]"
+        Write-Host "##vso[task.setvariable variable=npm_config_cache]$(npm_config_cache_value)"
