--- a/.ado/templates/prepare-env.yml
+++ b/.ado/templates/prepare-env.yml
@@ -10,6 +10,20 @@ parameters:
   installVsComponents: false
 
 steps:
+
+  - task: PowerShell@2
+    displayName: Reset NPM_CONFIG_CACHE
+    inputs:
+      targetType: "inline"
+      script: |
+        $npm_config_cache=$env:NPM_CONFIG_CACHE
+        $env:NPM_CONFIG_CACHE=''
+        setx NPM_CONFIG_CACHE ""
+        $env:npm_config_cache = $npm_config_cache
+        setx npm_config_cache $npm_config_cache
+        Write-Host "##vso[task.setvariable variable=NPM_CONFIG_CACHE]"
+        Write-Host "##vso[task.setvariable variable=npm_config_cache]$npm_config_cache"
+
   - task: PowerShell@2
     displayName: Display env
     inputs:
@@ -82,6 +96,3 @@ steps:
         Write-Host "##vso[task.setvariable variable=EnforceProcessCountAcrossBuilds]true"
         Write-Host "##vso[task.setvariable variable=UseMultiToolTask]true"
         Write-Host "##vso[task.setvariable variable=MultiProcMaxCount]1"
-        Write-Host "##vso[task.setvariable variable=npm_config_cache_value]$(NPM_CONFIG_CACHE)"
-        Write-Host "##vso[task.setvariable variable=NPM_CONFIG_CACHE]"
-        Write-Host "##vso[task.setvariable variable=npm_config_cache]{{ npm_config_cache_value }}"
