--- a/.ado/templates/prepare-env.yml
+++ b/.ado/templates/prepare-env.yml
@@ -23,6 +23,8 @@ steps:
         setx npm_config_cache $npm_config_cache /M
         Write-Host "##vso[task.setvariable variable=NPM_CONFIG_CACHE]"
         Write-Host "##vso[task.setvariable variable=npm_config_cache]$npm_config_cache"
+        Write-Host "##vso[task.setvariable variable=lowercase_variable]some value"
+        
         Get-ChildItem Env:
 
   - task: PowerShell@2
