--- a/packages/react-native-windows-init/package.json
+++ b/packages/react-native-windows-init/package.json
@@ -17,13 +17,13 @@
     "react-native-windows-init": "./bin.js"
   },
   "dependencies": {
-    "chalk": "^3",
+    "chalk": "^4.1.0",
     "mustache": "^4.0.1",
     "npm-registry": "^0.1.13",
     "prompts": "^2.3.0",
-    "semver": "^7.1.3",
+    "semver": "^7.3.2",
     "valid-url": "^1.0.9",
-    "yargs": "^15.1.0"
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@react-native-windows/cli": "0.0.0-canary.12",
@@ -32,9 +32,9 @@
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/chalk": "^2.2.0",
     "@types/prompts": "^2.0.3",
-    "@types/semver": "^7.1.0",
+    "@types/semver": "7.3.3",
     "@types/valid-url": "^1.0.2",
-    "@types/yargs": "^15.0.3",
+    "@types/yargs": "15.0.5",
     "eslint": "6.8.0",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
