--- a/packages/@rnw-scripts/eslint-config/package.json
+++ b/packages/@rnw-scripts/eslint-config/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "eslintrc.js",
   "dependencies": {
-    "@rnw-scripts/eslint-root-config": "0.0.1"
+    "@react-native-community/eslint-config": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "6.8.0"
