--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -31,7 +31,7 @@
     "@babel/runtime": "^7.8.4",
     "@rnw-scripts/eslint-config": "0.1.1",
     "@rnw-scripts/ts-config": "0.1.0",
-    "@types/jasmine": "2.8.7",
+    "@types/jasmine": "^3.3.0",
     "@types/node": "^10.14.8",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
