IntegrationTest Framework Enhancments
This change offers a variety of fixes/enhacments to the new IntegrationTest Framework

- Tests running in the RN instance can now use Chai for assertions
- Better sample tests making use of assertions against real RN APIs
- Improve our RedboxHandler so that we get resolved sources
- Rename the Jest config to prevent VSCode from running it on file change
- More gracefully handle receiving a new test runner connection while a test is still active
- Accept a string instead of error for componentTest failure callback

--- a/packages/IntegrationTest/package.json
+++ b/packages/IntegrationTest/package.json
@@ -7,9 +7,10 @@
     "start": "react-native start",
     "lint": "just-scripts lint",
     "lint:fix": "just-scripts lint:fix",
-    "integrationtest": "jest --runInBand --verbose --color"
+    "integrationtest": "jest --config jest.integration.config.js --runInBand --verbose --color"
   },
   "dependencies": {
+    "chai": "^4.2.0",
     "react": "16.13.1",
     "react-native": "0.0.0-e75557b48",
     "react-native-windows": "^0.0.0-canary.159"
@@ -22,6 +23,7 @@
     "@rnw-scripts/eslint-config": "^0.1.1",
     "@rnw-scripts/just-task": "^0.0.3",
     "@rnw-scripts/ts-config": "^0.1.0",
+    "@types/chai": "^4.2.12",
     "@types/jest": "^26.0.13",
     "@types/ora": "^3.2.0",
     "@types/ws": "^7.2.6",
