--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -315,7 +315,15 @@ jobs:
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
 
     variables:
-      Desktop.IntegrationTests.Filter: (FullyQualifiedName!~WebSocket)
+      Desktop.IntegrationTests.Filter: |
+        (FullyQualifiedName!=RNTesterIntegrationTests::AsyncStorage)&
+        (FullyQualifiedName!=RNTesterIntegrationTests::Dummy)&
+        (FullyQualifiedName!=RNTesterIntegrationTests::IntegrationTestHarness)&
+        (FullyQualifiedName!=RNTesterIntegrationTests::Logging)&
+        (FullyQualifiedName!=RNTesterIntegrationTests::WebSocket)&
+        (FullyQualifiedName!=RNTesterIntegrationTests::XHRSample)&
+        (FullyQualifiedName!~WebSocketModule_)&
+        (FullyQualifiedName!=WebSocketResourcePerformanceTest::ProcessThreadsPerResource)
 
     steps:
       - checkout: self
@@ -383,7 +391,7 @@ jobs:
           publishRunAttachments: true
           collectDumpOn: onAbortOnly
           vsTestVersion: toolsInstaller
-          otherConsoleOptions: '/blame -- RunConfiguration.TestSessionTimeout=1600000'
+          otherConsoleOptions: '/blame -- RunConfiguration.TestSessionTimeout=300000'
         condition: and(succeeded(), ne(variables['BuildConfiguration'], 'Debug'))
 
       - task: VSTest@2
@@ -415,7 +423,7 @@ jobs:
           publishRunAttachments: true
           collectDumpOn: onAbortOnly
           vsTestVersion: toolsInstaller
-          otherConsoleOptions: '/blame -- RunConfiguration.TestSessionTimeout=1600000'
+          otherConsoleOptions: '/blame -- RunConfiguration.TestSessionTimeout=300000'
         condition: failed()
 
       - task: PowerShell@2
