--- a/packages/IntegrationTest/package.json
+++ b/packages/IntegrationTest/package.json
@@ -20,6 +20,7 @@
     "@babel/parser": "^7.11.5",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
+    "@babel/traverse": "^7.11.5",
     "@rnw-scripts/eslint-config": "^0.1.3",
     "@rnw-scripts/just-task": "^0.0.4",
     "@rnw-scripts/ts-config": "^0.1.0",
