Ensure Integration Tests Show Exceptions When Source Resolution Fails
RN will sometimes fail to prettify stack information with source map information. In this case, the RedboxHandler never sees a call to update error information. We don't have a great signal of when this fails, so this change alters logic so that a timeout will show exception information if we have an unresolved exception pending.

Validated cases around:
- Tests passing
- Badly behaved tests calling testPassed multiple times not leaking
- Live reload
- Exceptions where resolution succeeds
- Exceptions where resolution fails

--- a/packages/IntegrationTest/windows/integrationtest/integrationtest.vcxproj
+++ b/packages/IntegrationTest/windows/integrationtest/integrationtest.vcxproj
@@ -105,6 +105,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ExceptionInfo.h" />
     <ClInclude Include="MainPage.h">
       <DependentUpon>MainPage.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -118,6 +119,7 @@
     <ClInclude Include="TestCommandListener.h" />
     <ClInclude Include="TestHostHarness.h" />
     <ClInclude Include="TestModule.h" />
+    <ClInclude Include="TestTransaction.h" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -155,6 +157,7 @@
     <ClCompile Include="TestCommandListener.cpp" />
     <ClCompile Include="TestHostHarness.cpp" />
     <ClCompile Include="TestModule.cpp" />
+    <ClCompile Include="TestTransaction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl">
