--- a/vnext/ReactWindowsCore/ReactWindowsCore.vcxproj
+++ b/vnext/ReactWindowsCore/ReactWindowsCore.vcxproj
@@ -3,5 +3,5 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{11C084A3-A57C-4296-A679-CAC17B603144}</ProjectGuid>
   </PropertyGroup>
-  <Import Project="ReactWindowsCore.vcxitems" Label="Shared" />
+  <Import Project="ReactWindowsCore-Items.vcxitems" Label="Shared" />
 </Project>
