--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -24,7 +24,8 @@ jobs:
   - job: RnwNpmPublish
     displayName: React-Native-Windows Npm Build Rev Publish
     pool:
-      vmImage: $(VmImage)
+      vmImage: $(vmImage)
+
     timeoutInMinutes: 120
     cancelTimeoutInMinutes: 5
     steps:
@@ -81,7 +82,7 @@ jobs:
           BuildPlatform: ARM64
 
     pool:
-      vmImage: $(VmImage)
+      vmImage: $(vmImage)
 
     steps:
       - template: templates/apply-published-version-vars.yml
@@ -133,7 +134,7 @@ jobs:
           BuildConfiguration: Release
           BuildPlatform: arm64
     pool:
-      vmImage: $(VmImage)
+      vmImage: $(vmImage)
 
     steps:
       - template: templates/apply-published-version-vars.yml
@@ -164,7 +165,8 @@ jobs:
       - RnwNativeBuildUniversal
     displayName: Sign Binaries and Publish NuGet
     pool:
-      vmImage: $(VmImage)
+      vmImage: $(vmImage)
+
       # Disable codesign for now, until we're sure
       # vmImage: Package ES Lab E
 
