--- a/.ado/variables/vs2019.yml
+++ b/.ado/variables/vs2019.yml
@@ -1,6 +1,7 @@
 variables:
-  VmImage: windows-2019
   MSBuildVersion: 16.0
   GoogleTestAdapterPathExpression: '(Get-ChildItem "${env:ProgramFiles(x86)}\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\Extensions\" -Directory | Where-Object -FilterScript { Test-Path $_\GoogleTestAdapter.Core.dll}).FullName'
   BaseIntDir: $(Agent.HomeDirectory)\BaseIntDir # redirect to C:
   runCodesignValidationInjection: false
+  vmImage: windows-2019
+  containerImage: rnwci.azurecr.io/pr/warmedup:24404ef09d15fd69f9908c3a76ddd5512a51559a
