--- a/vnext/Scripts/Containers/WarmCache/Dockerfile
+++ b/vnext/Scripts/Containers/WarmCache/Dockerfile
@@ -1,4 +1,6 @@
-FROM rnwci.azurecr.io/pr/prereqs:20200923
+ARG IMAGE=rnwci.azurecr.io/pr/prereqs:20200923
+
+FROM $IMAGE
 WORKDIR c:\\setup
 COPY WarmupCaches.ps1 .
 Run powershell ./WarmupCaches.ps1
