--- a/packages/@react-native-windows/cli/package.json
+++ b/packages/@react-native-windows/cli/package.json
@@ -13,6 +13,7 @@
     "clean": "just-scripts clean",
     "lint": "just-scripts lint",
     "lint:fix": "just-scripts lint:fix",
+    "test": "just-scripts test",
     "watch": "just-scripts watch"
   },
   "dependencies": {
@@ -35,10 +36,12 @@
   "devDependencies": {
     "@react-native-community/cli-types": "^4.10.1",
     "@rnw-scripts/eslint-config": "0.1.3",
+    "@rnw-scripts/jest-unittest-config": "0.1.0",
     "@rnw-scripts/just-task": "0.0.4",
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/chalk": "^2.2.0",
     "@types/inquirer": "^6.5.0",
+    "@types/jest": "^26.0.13",
     "@types/mustache": "^4.0.1",
     "@types/ora": "^3.2.0",
     "@types/semver": "^7.3.3",
@@ -46,7 +49,9 @@
     "@types/uuid": "^8.0.0",
     "@types/xml-parser": "^1.2.29",
     "@types/xmldom": "^0.1.29",
+    "babel-jest": "^26.3.0",
     "eslint": "6.8.0",
+    "jest": "^26.4.2",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
   },
