--- a/packages/react-native-windows-init/package.json
+++ b/packages/react-native-windows-init/package.json
@@ -11,6 +11,7 @@
     "clean": "just-scripts clean",
     "lint": "just-scripts lint",
     "lint:fix": "just-scripts lint:fix",
+    "test": "just-scripts test",
     "watch": "just-scripts watch"
   },
   "bin": {
@@ -28,14 +29,18 @@
   "devDependencies": {
     "@react-native-windows/cli": "0.0.0-canary.17",
     "@rnw-scripts/eslint-config": "0.1.3",
+    "@rnw-scripts/jest-unittest-config": "0.1.0",
     "@rnw-scripts/just-task": "0.0.4",
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/chalk": "^2.2.0",
+    "@types/jest": "^26.0.13",
     "@types/prompts": "^2.0.3",
     "@types/semver": "7.3.3",
     "@types/valid-url": "^1.0.2",
     "@types/yargs": "15.0.5",
+    "babel-jest": "^26.3.0",
     "eslint": "6.8.0",
+    "jest": "^26.4.2",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
   },
