Alternate variable syntax

--- a/.ado/templates/e2e-test-job.yml
+++ b/.ado/templates/e2e-test-job.yml
@@ -14,7 +14,8 @@ jobs:
 
     variables:
       - template: variables/vs2019.yml
-      - BuildLogDirectory:  $(Build.BinariesDirectory)\$(BuildPlatform)\BuildLogs
+      - name: BuildLogDirectory
+        value: $(Build.BinariesDirectory)\$(BuildPlatform)\BuildLogs
 
     timeoutInMinutes: 60 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
