--- a/.ado/templates/e2e-test-job.yml
+++ b/.ado/templates/e2e-test-job.yml
@@ -13,7 +13,7 @@ jobs:
       vmImage: $(VmImage)
 
     variables:
-      - template: variables/vs2019.yml
+      - template: ../variables/vs2019.yml
       - name: BuildLogDirectory
         value: $(Build.BinariesDirectory)\$(BuildPlatform)\BuildLogs
 
