--- a/.ado/templates/macos-tests-job.yml
+++ b/.ado/templates/macos-tests-job.yml
@@ -11,7 +11,7 @@ jobs:
       vmImage: $(VmImage)
     
     variables:
-      - template: variables/macos.yml
+      - template: ../variables/macos.yml
 
     timeoutInMinutes: 20 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
