AZP doesn't like env vars in working directories

--- a/.ado/templates/macos-tests-job.yml
+++ b/.ado/templates/macos-tests-job.yml
@@ -34,12 +34,14 @@ jobs:
       - script: yarn validate-overrides
         displayName: yarn validate-overrides
 
-      - script: git config --list
-        workingDirectory: $TMPDIR/react-native-platform-override/git
+      - script: |
+          cd $TMPDIR/react-native-platform-override/git
+          git config --list
         displayName: Print scratch repository config
         condition: failed()
 
-      - script: git status
-        workingDirectory: $TMPDIR/react-native-platform-override/git
+      - script: |
+          cd $TMPDIR/react-native-platform-override/git
+          git status
         displayName: Print scratch repository status
         condition: failed()
